# unireck-backend-test

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: decode.py
app/core/: auth.py  config.py  db.py  exceptions.py
app/models/: __init__.py  decode_run.py
app/providers/: __init__.py  base.py  fake.py  kimi.py
app/schemas/: __init__.py  brief_decode.py
app/services/: __init__.py  decode_run_service.py  decode_service.py  prompts.py
tests/: test_decode_api.py  test_health.py
tests/core/: test_config.py
tests/models/: test_decode_run.py
tests/providers/: test_fake_provider.py  test_kimi_provider.py
tests/schemas/: test_brief_decode.py
tests/services/: test_decode_run_service.py  test_prompts.py
